# simpleCompression

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/libs/: CMakeLists.txt  binTree.c  binTree.h  separate.c  separate.h
tests/src/: separator.c
